--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.2.7
+astroid==2.3.3
+certifi==2020.4.5.1
+chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.4
 django-cors-headers==3.2.1
@@ -6,12 +9,20 @@ django-heroku==0.3.1
 djangorestframework==3.11.0
 editdistance==0.5.3
 gunicorn==20.0.4
+idna==2.9
+isort==4.3.21
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 mysqlclient==1.4.6
 names==0.3.0
 nltk==3.4.5
 numpy==1.18.2
 psycopg2==2.8.4
+pylint==2.4.4
 pytz==2019.3
+requests==2.23.0
 six==1.14.0
 sqlparse==0.3.1
+urllib3==1.25.8
 whitenoise==5.0.1
+wrapt==1.11.2
